--- a/Task 3/style.css
+++ b/Task 3/style.css
@@ -58,4 +58,27 @@
   padding: 30px;
   border-radius: 5px;
   background-color: #fff;
+
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 2rem;
+  box-shadow: rgba(0, 0, 0, 0.5) 0px 4px 12px;
+}
+
+img {
+  width: 13rem;  
+}
+
+.card {
+  border: 2px solid #222;
+  border-radius: 0.5rem;
+  overflow: hidden;
+  margin: auto;
+  margin-bottom: 0.5rem;
+}
+
+h4 {
+  text-align: center;
 }
